fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-184-0c09788bb7.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Clamp() {
  return (
    <Flex alignItems="center" bg="#FFF" p="10px">
      <Text
        color="#000"
        flex="1"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
        overflow="hidden"
        textOverflow="ellipsis"
        whiteSpace="nowrap"
      >
        Getting into life {"'"}Cause I found that it{"'"}s not so boring Not anymore.
      </Text>
    </Flex>
  )
}"
