fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-185-e79c2ae189.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Clamp() {
  return (
    <Flex alignItems="center" bg="#FFF" p="10px">
      <Text
        color="#000"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
        whiteSpace="nowrap"
      >
        Getting into life {"'"}Cause I found that it{"'"}s not so boring Not anymore.
      </Text>
    </Flex>
  )
}"
