fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-186-0988e78887.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Clamp() {
  return (
    <Flex alignItems="center" bg="#FFF" p="10px">
      <Text
        WebkitBoxOrient="vertical"
        WebkitLineClamp="2"
        color="#000"
        display="-webkit-box"
        flex="1"
        fontFamily="Inter"
        fontSize="16px"
        fontWeight="400"
        letterSpacing="0em"
        lineHeight="26px"
        overflow="hidden"
        textOverflow="ellipsis"
      >
        Getting into life {"'"}Cause I found that it{"'"}s not so boring Not anymore.
      </Text>
    </Flex>
  )
}"
