fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-188-ea2a1af6a1.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Effect() {
  return <Box bg="#FFF" borderRadius="20px" boxShadow="inset 0 4px 4px 0 #00000040" overflow="hidden" />
}"
