fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-189-75736e48e0.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Effect() {
  return <Box bg="#FFF" borderRadius="20px" filter="blur(4px)" overflow="hidden" />
}"
