fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-191-2021d398f8.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Dimmed와Absolute() {
  return (
    <VStack
      bg="linear-gradient(90deg, $primaryBgLight 0%, $secondaryBg 100%)"
      gap="20px"
      justifyContent="center"
      overflow="hidden"
      pos="relative"
      px="20px"
      py="50px"
      w="360px"
      zIndex="0"
    >
      <Image
        filter="blur(12px)"
        h="100%"
        pos="absolute"
        right="-108.01px"
        src="/images/puzzle.png"
        top="-76px"
        transform="rotate(8.83deg)"
        transformOrigin="top left"
        w="300px"
        zIndex="-1"
      />
      <Box
        bg="linear-gradient(0deg, #EDEEFF 0%, #EDEEFF00 100%)"
        boxSize="100%"
        left="0px"
        pos="absolute"
        top="0px"
        zIndex="-1"
      />
      <VStack gap="8px" justifyContent="center">
        <Text
          color="$primary"
          fontFamily="Pretendard"
          fontSize="12px"
          fontWeight="600"
          letterSpacing="-0.04em"
          lineHeight="19px"
          wordBreak="keep-all"
        >
          지금 시작할 수 있어요
        </Text>
        <Text
          color="$title"
          fontFamily="Pretendard"
          fontSize="20px"
          fontWeight="700"
          letterSpacing="-0.04em"
          lineHeight="24px"
          wordBreak="keep-all"
        >
          내 삶을 더 잘 이해하는 첫 걸음
        </Text>
      </VStack>
      <Text
        color="$text"
        fontFamily="Pretendard"
        fontSize="14px"
        fontWeight="400"
        letterSpacing="-0.04em"
        lineHeight="22px"
        whiteSpace="pre-wrap"
        wordBreak="keep-all"
      >
        자꾸 미뤄졌던 나에 대한 고민, <br />퍼즐핏에서 구체적인 답을 찾아보세요.
      </Text>
      <VStack gap="12px" justifyContent="center">
        <GradientButton />
        <Text
          color="$textLight"
          fontFamily="Pretendard"
          fontSize="12px"
          fontWeight="400"
          letterSpacing="-0.04em"
          lineHeight="19px"
          opacity="0.5"
          wordBreak="keep-all"
        >
          회원가입 후, 유료로 진행됩니다
        </Text>
      </VStack>
    </VStack>
  )
}"
