fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-192-dd2c3f0c1c.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Svg() {
  return (
    <Box
      aspectRatio="1"
      bg="$caption"
      maskImage="url(/icons/recommend.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
