fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-193-bd488a5710.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Svg() {
  return (
    <Box
      bg="$caption"
      h="34.03px"
      maskImage="url(/icons/recommend.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
      w="19.61px"
    />
  )
}"
