fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-194-17922977f6.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Svg() {
  return (
    <Box
      bg="$caption"
      maskImage="url(/icons/recommend.svg)"
      maskPos="center"
      maskRepeat="no-repeat"
      maskSize="contain"
    />
  )
}"
