fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-196-d14f03afcd.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"export function Svg() {
  return <Image src="/icons/recommend.svg" />
}"
